--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ doc
 
 # jeweler generated
 pkg
+/tmp
 
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
