--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # rcov generated
 coverage
+coverage.vim
 
 # rdoc generated
 rdoc
@@ -15,7 +16,7 @@ doc
 pkg
 /tmp
 
-# Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
+# Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore:
 #
 # * Create a file at ~/.gitignore
 # * Include files you want ignored
