--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ rvm:
   - 1.9.3
 before_install:
   - gem update --system
+before_script:
+  apt-get install dictionaries-common
 script: "rake spec"
 branches:
   only:
