--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
   - 1.9.3
 before_install:
   - gem update --system
-  - sudo apt-get install dictionaries-common
+  - sudo apt-get install dictionaries-common wamerican
 script: "rake spec"
 branches:
   only:
