--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 before_install:
   - gem update --system
   - sudo apt-get install dictionaries-common wamerican
-script: "rake spec"
+script: "rake spec && cucumber ./features"
 branches:
   only:
     - master
